# Planning_Project

./: .gitignore  project.launch
CVAE/: LearningNarrowPassages.ipynb  make_map.py
CVAE/.ipynb_checkpoints/: LearningNarrowPassages-checkpoint.ipynb
CVAE/Maps/: Untitled2.ipynb  (+12 more)
FMT*/: dataset.npz  dubins.py  fmt.py  test_case.npz  test_fmt.py
Maps/: Untitled.ipynb  make_map.py  map1.npy  map2.npy  map2.txt
Planning_Project.xcworkspace/: contents.xcworkspacedata
RRT_Connect/: rrt_connect.py  test_rrt_connect.py
RRT_Star/: PRM.txt  RRT_Star.txt  end.txt  end_1.txt  end_2.txt  end_3.txt  end_4.txt  kdtree.cpp  kdtree.hpp  nodes_1.txt  nodes_2.txt  nodes_4.txt  planner.cpp  planner.mexmaci64  prm.cpp  prm.hpp  rrt_star.cpp  rrt_star.hpp  runtest.m  start.txt  start_1.txt  start_2.txt  start_3.txt  start_4.txt  test_all.m  tree.cpp  tree.hpp
car_planner/: CMakeLists.txt  package.xml  setup.py
car_planner/launch/: test_map.launch
car_planner/maps/map5/: map.yaml
car_planner/maps/test_map/: map.yaml
car_planner/scripts/: map_service  path_planner
car_planner/src/fmt/: CMakeLists.txt  fmt.h
car_planner/src/fmt/KDTree/src/: KDTree.h
car_planner/src/fmt/test/: test.cpp
car_planner/src/map/: map_service.py
car_planner/src/pathplanner_node/: pathplanner.py
car_planner/src/pathplanner_node/lib/CVAE/: OriginalLearningNarrowPassages.ipynb
car_planner/src/pathplanner_node/lib/CVAE/.ipynb_checkpoints/: LearningNarrowPassages-checkpoint.ipynb
car_planner/src/pathplanner_node/lib/CVAE/Maps/: Untitled1.ipynb  map1.npy  map4_orig.txt  map5.npy  map5_orig.txt  map7_orig.txt
car_planner/src/pathplanner_node/lib/CVAE/Maps/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
car_planner/src/pathplanner_node/lib/CVAE/Models/01/: model_for_map1_iter450000.index  model_for_map1_iter460000.index  model_for_map1_iter480000.index
car_planner/src/pathplanner_node/lib/CVAE/Models/02/: model_for_map2_iter450000.index  model_for_map2_iter480000.index
car_planner/src/pathplanner_node/lib/CVAE/Models/Unified/: checkpoint  model_for_map_iter450000.index  model_for_map_iter470000.index
car_planner/src/pathplanner_node/lib/CVAE/Training_Data/: map1_training_map1_iteration13.npz  map1_training_map1_iteration15.npz  map1_training_map1_iteration16.npz  map1_training_map1_iteration17.npz  map1_training_map1_iteration5.npz  map1_training_map1_iteration6.npz  map1_training_map1_iteration8.npz  map3_training.npz  map3_training_1.npz  map4_mini.npy  map4_training_2.npz  map5_training.npz  map6.npy  map7.npy
car_planner/src/pathplanner_node/lib/CVAE/outputs/: map1_training_map1_iteration1.npz  map1_training_map1_iteration2.npz
car_planner/src/pathplanner_node/lib/FMT/: dubins.py  dubins_pts.npz  dubins_test.py  fmt.py  tc.npz  test_fmt.py
car_planner/src/pathplanner_node/lib/RRT_Connect/: rrt_connect.py  test_rrt_connect.py
clifford_description/: CMakeLists.txt  package.xml
clifford_description/launch/: clifford-simple.launch
clifford_description/scripts/: imu2tf.py
clifford_description/urdf/: clifford-simple.urdf.xacro
clifford_gazebo/: CMakeLists.txt  package.xml
clifford_gazebo/config/: clifford_mixing_params.yaml  clifford_simple_joint_ctrlr_params.yaml
clifford_gazebo/launch/: clifford_gazebo.launch
clifford_gazebo/models/materials/scripts/: mountains.material  rockygrass.material
clifford_gazebo/models/mountains/: model.config  model.sdf
clifford_gazebo/models/mountains2/: model.config  model.sdf
clifford_gazebo/scripts/: clifford_cmd_mixing.py
clifford_gazebo/worlds/: mountains.world  underwater_heightmap.world
clifford_msgs/: CMakeLists.txt  package.xml
optimal_connections/: inverseDyn.py  lqr_controller.py  main.py  model.json  sim_model.py
sampling_node/: CMakeLists.txt  package.xml
(+57 files in other folders)
